Bootstrap was after custom css in links resolved this issue. Found a stackoverflow thread detailing how to impose a button over an image.  Planning to implement this with handlebars to create a landing page of sorts

--- a/public/main.css
+++ b/public/main.css
@@ -1,7 +1,43 @@
-.container {
+body {
     background-color: black;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 14px;
+}
+
+.container {
+    background-color: antiquewhite;
+    height: auto;
+    width: auto;
+    opacity: .8;
+    padding: 30px;
+    border: 1px solid gray;
 }
 
 .nav {
     background-color: blanchedalmond;
 }
+
+.img-wrapper {
+    position: relative;
+   }
+  
+  .img-responsive {
+    width: 100%;
+    height: auto;
+  }
+  
+  .img-overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+  }
+  
+  .img-overlay:before {
+    content: ' ';
+    display: block;
+    /* adjust 'height' to position overlay content vertically */
+    height: 50%;
+  }
